--- a/src/AppPartes.Web/Views/Reports/Index.cshtml
+++ b/src/AppPartes.Web/Views/Reports/Index.cshtml
@@ -1,10 +1,117 @@
-﻿
+﻿@model AppPartes.Logic.ReportsViewLogic
 @{
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
-@*<a class="nav-link text-dark" asp-area="" asp-controller="Reports" asp-action="Export">Test</a>
-<a href="https://localhost:44339/demo.xlsx">Enlace a un documento</a>*@
+<a class="nav-link text-dark" asp-area="" asp-controller="Reports" asp-action="Export">Test</a>
+    <a href="https://localhost:44339/demo.xlsx">Enlace a un documento</a>
+
+<body class="is-preload">
+
+    <!-- Wrapper -->
+    <div id="wrapper">
+
+        <!-- Main -->
+        <div id="main">
+            <!--<div class="inner">-->
+            <!-- Header -->
+            <header id="header">
+                <a href="#" class="logo"><strong>Grupo Aldakin</strong></a>
+            </header>
+            <!-- Content -->
+            <section>
+                @{
+                    if (!string.IsNullOrEmpty(ViewBag.Message))
+                    {
+                        <div class="alert alert-warning">@ViewBag.Message</div>
+                    }
+                }
+                <header class="main">
+                    <h1>Informes</h1>
+                </header>
+                <!-- Content -->
+                <!--<h2 id="content">Sample Content</h2>-->
+                <div class="col-12">
+                    <p>Informe de horas de cada dia trabajado.</p>
+                    <form asp-action="ExportHoursPerMonth" asp-controller="Reports" method="post">
+                        <div class="row gtr-uniform">
+                            <div class="col-12">
+                                <!--<h3>Seleccione un dia:</h3>-->
+                                <label for="start">* Seleccione un día:</label>
+
+                                <input type="date" id="CalendarioSelec" name="strCalendario"
+                                       value=""
+                                       min="@(DateTime.Now.Year-2)-01-01"
+                                       max="@(DateTime.Now.Year+2)-12-31" required>
+
+                            </div>
+
+                            <div class="col-12">
+                                <label for="start">Entidad:</label>
+                                <select id="entidadSelec" name="strEntidad" required>
+                                    <option value=""></option>
+                                    @foreach (var dept in Model.lEntidad)
+                                    {
+                                        <option value="@dept.CodEnt">
+                                            @dept.Nombre
+                                        </option>
+                                    }
+                                </select>
+                            </div>
+                            <div class="col-12">
+                                <ul class="actions">
+                                    <li><input type="submit" value="Exportar" class="primary" /></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+
+
+
+
+                <hr class="major" />
+
+
+                <div class="col-12">
+                    <p>Informe de horas de cada dia trabajado por cada tipo de horas.</p>
+                    <form asp-action="ExportHoursTypeHour" asp-controller="Reports" method="post">
+                        <div class="row gtr-uniform">
+                            <div class="col-12">
+                                <!--<h3>Seleccione un dia:</h3>-->
+                                <label for="start">* Seleccione un día:</label>
+
+                                <input type="date" id="CalendarioSelec" name="strCalendario"
+                                       value=""
+                                       min="@(DateTime.Now.Year-2)-01-01"
+                                       max="@(DateTime.Now.Year+2)-12-31" required>
+
+                            </div>
+
+                            <div class="col-12">
+                                <label for="start">Entidad:</label>
+                                <select id="entidadSelec" name="strEntidad" required>
+                                    <option value=""></option>
+                                    @foreach (var dept in Model.lEntidad)
+                                    {
+                                        <option value="@dept.CodEnt">
+                                            @dept.Nombre
+                                        </option>
+                                    }
+                                </select>
+                            </div>
+                            <div class="col-12">
+                                <ul class="actions">
+                                    <li><input type="submit" value="Exportar" class="primary" /></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </section>
+            <!--</div>-->
+        </div>
+    </div>
+</body>
 
 
