informes de excel por horas pendiente el excel de horas por tipo horas

--- a/src/AppPartes.Web/Views/Reports/Index.cshtml
+++ b/src/AppPartes.Web/Views/Reports/Index.cshtml
@@ -3,8 +3,8 @@
     ViewData["Title"] = "Index";
 }
 
-<a class="nav-link text-dark" asp-area="" asp-controller="Reports" asp-action="Export">Test</a>
-    <a href="https://localhost:44339/demo.xlsx">Enlace a un documento</a>
+@*<a class="nav-link text-dark" asp-area="" asp-controller="Reports" asp-action="Export">Test</a>
+    <a href="https://localhost:44339/demo.xlsx">Enlace a un documento</a>*@
 
 <body class="is-preload">
 
