--- a/src/AppPartes.Web/Views/WeekReview/Index.cshtml
+++ b/src/AppPartes.Web/Views/WeekReview/Index.cshtml
@@ -803,6 +803,11 @@
                                                             <td>@part.Npartefirmado</td>
                                                             <td>@part.Validado</td>
                                                         </tr>
+                                                        <tr>
+                                                            <td  colspan="10">
+                                                                @part.ObservacionesCompleta
+                                                            </td>
+                                                        </tr>
                                                     }
                                                 </tbody>
                                                 @*<tfoot>
