revision completa de funcionalidades a nivel usuario y admin

--- a/src/AppPartes.Web/Views/SearchEdit/Index.cshtml
+++ b/src/AppPartes.Web/Views/SearchEdit/Index.cshtml
@@ -564,7 +564,7 @@
                             </div>
                         </div>
                         <div class="col-12">
-                            <label for="start">Mensaje para informar al operaio del cambio:*</label>
+                            <label for="start">Mensaje para informar al operario del cambio:*</label>
                             <textarea name="strMessage" id="strMessage" placeholder="Enter your message" rows="6" required></textarea>
                         </div>
 
